--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a target="_blank" href="https://twitter.com/aahbing">twitter</a></li>
     <li><a target="_blank" href="https://github.com/ahbing">github</a></li>
     <li><a target="_blank" href="https://medium.com/@aahbing">medium</a></li>
-    <li><a target="_blank" href="http://www.flickr.com/photos/jiuyue/">flickr</a></li>
+    <li><a target="_blank" href="http://www.flickr.com/people/liferainbow/">flickr</a></li>
   </ul>
   <p>Thank you for your attention.</p>
 </body>
