--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
     margin-top: 4rem;
     margin-bottom: 2rem;
   }
+  .september > footer a {
+    font-size: 1.4rem; 
+  }
   </style>
 </head>
 <body class="september">
   <header>
-    <h1>Ahbing</h1>
+    <h1>September</h1>
     <h2>Records about life, books, code and philosophy.</h2>
   </header>
   <article>
@@ -46,17 +49,15 @@
   <hr>
   <nav>
     <ul>
-      <li><a target="_blank" href="https://medium.com/@aahbing">Medium</a>: 独立的思考的杂文</li>
-      <li><a target="_blank" href="https://www.douban.com/people/78504665/">Douban</a>:电影、书籍和音乐的列表</li>
-      <li><a target="_blank" href="https://github.com/ahbing">Github</a>: 用代码改良世界的一种方式</li>
-      <li><a target="_blank" href="http://blog.ahbing.me">Blog</a>: 有关技术的学习记录与思考总结</li>
-      <li><a target="_blank" href="http://fanfou.com/ahbing">Fanfou</a>: 关于生活随想与琐事的一种记录</li>
-      <li><a target="_blank" href="https://about.me/ahbing">More about Me</a>: More self-introduction</li>
+      <!--<li><a target="_blank" href="https://medium.com/@aahbing">Medium</a>: 独立的思考的杂文</li>-->
+      <li><a target="_blank" href="http://blog.ahbing.me">Blog</a>: Technology-related articles.</li>
+      <li><a target="_blank" href="http://fanfou.com/ahbing">Fanfou</a>: Life's perception and trivia.</li>
+      <li><a target="_blank" href="https://www.douban.com/people/aahbing/">Douban</a>: A list of movies, books, and music.</li>
     </ul>
   </nav>
 
   <footer>
-    <span>&copy; Copyright 2015 - 2016 by ahbing</span>
+    <span>&copy; Copyright 2015 - 2016 by <a target="_blank" href="https://about.me/ahbing">Ahbing Huang</a></span>
   </footer>
   <script src="./records.js"></script>
   <script>
