--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>September Blue</title>
+  <title>九月</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./september.css">
@@ -25,9 +25,11 @@
     margin-top: 14rem;
     margin-bottom: 6rem; 
   }
+
   .september > header h2 {
-    margin-top: 4rem;
+    margin-top: -2rem;
     color: #787879;
+    font-weight: lighter
   }
   .september > footer {
     margin-top: 4rem;
@@ -36,47 +38,98 @@
   .september > footer a {
     font-size: 1.4rem; 
   }
+  .september .pagination {
+    margin-top: 3.6rem; 
+  }
+  .prev {
+   padding-right:1rem; 
+  }
+  .next {
+    float: right;
+    padding-left:1rem;
+  }
   </style>
 </head>
 <body class="september">
   <header>
-    <h1>September</h1>
-    <h2>Records about life, books, code and philosophy.</h2>
+    <h1>九月</h1>
+    <h2>零碎的、断续的、明灭的。</h2>
   </header>
   <article>
     <p><time></time></p>
+    <p class="pagination"><a class="prev" href="">往者</a><a class="next" href="">来者</a></p>
   </article>
   <hr>
   <nav>
     <ul>
-      <!--<li><a target="_blank" href="https://medium.com/@aahbing">Medium</a>: 独立的思考的杂文</li>-->
-      <li><a target="_blank" href="http://blog.ahbing.me">Blog</a>: Technology-related articles.</li>
-      <li><a target="_blank" href="http://fanfou.com/ahbing">Fanfou</a>: Life's perception and trivia.</li>
-      <li><a target="_blank" href="https://www.douban.com/people/aahbing/">Douban</a>: A list of movies, books, and music.</li>
+      <li><a target="_blank" href="http://blog.ahbing.me">博客</a>: 技术相关的文章。</li>
+      <li><a target="_blank" href="https://www.douban.com/people/aahbing/">豆瓣</a>: 我的电影、书籍、音乐以及直觉。</li>
+      <li><a target="_blank" href="http://fanfou.com/ahbing">饭否</a>: 是我隐秘的哀愁，还我持重、克制的人生...</li>
     </ul>
   </nav>
 
   <footer>
-    <span>&copy; Copyright 2015 - 2016 by <a target="_blank" href="https://about.me/ahbing">Ahbing Huang</a></span>
+    <span>&copy; Copyright 2015 - 2017 by <a target="_blank" href="https://about.me/ahbing">Ahbing Huang</a></span>
   </footer>
   <script src="./records.js"></script>
   <script>
     var article = document.querySelector('article');
     var time = article.querySelector('time');
-    var record = records[0];
-    var targetTag = record.type ? 'img' : 'p';
-    var contentTarget = record.type ? 'src' : 'textContent';
+    var pagination = article.querySelector('.pagination');
     var docFragment = document.createDocumentFragment();
-    
-    time.textContent = record['time'];
-    var rows = record['rows'];
-    rows.forEach(function(row) {
-      var rowNode = document.createElement(targetTag);
-      rowNode[contentTarget] = row;
-      docFragment.appendChild(rowNode);
-    });
-    article.appendChild(docFragment);
-    
+
+    // init 
+    var initHash = window.location.hash;
+    var initIndex = initHash ? +initHash.slice(1) : 0;
+    generate(initIndex);
+    window.onhashchange = function(e) {
+      var newUrl = e.newURL;
+      var newHashIndex = +newUrl.slice(newUrl.lastIndexOf('#') + 1);
+      generate(newHashIndex)
+    }
+
+    // @parentNode @childNodeClassName
+    function removeOldChildren(parent, child) {
+      var child = parent.querySelectorAll(child);
+      child.forEach(function(item) {
+        parent.removeChild(item);
+      });
+    }
+
+    function updatePagination(index) {
+      var paginationPointer = pagination.querySelectorAll('a');
+      paginationPointer.forEach(function(item) {
+        var className = item.className;
+        if (className === 'prev') {
+          var prevIndex = index+1;
+          item.href = '#' + prevIndex;
+        } else if(className === 'next') {
+          var oldIndex = index-1;
+          item.href = '#' + oldIndex;
+        }
+      });
+    }
+
+    function generate(index) {
+      if (isNaN(index)) index = 0;
+      index = index < 0 
+        ? 0 : index > records.length - 1
+        ? records.length - 1 : index;
+      var record = records[index];
+      var targetTag = record.type ? 'img' : 'p';
+      var contentTarget = record.type ? 'src' : 'textContent';
+      time.textContent = record['time'];
+      var rows = record['rows'];
+      rows.forEach(function(row) {
+        var rowNode = document.createElement(targetTag);
+        rowNode.className = 'row';
+        rowNode[contentTarget] = row;
+        docFragment.appendChild(rowNode);
+      });
+      removeOldChildren(article, '.row');
+      article.insertBefore(docFragment, pagination);
+      updatePagination(index);
+    }
   </script>
 </body>
 </html>
