--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>九月</title>
+  <title>日长如小年</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./september.css">
@@ -26,8 +26,7 @@
     margin-bottom: 6rem; 
   }
 
-  .september > header h2 {
-    margin-top: -2rem;
+  .september > header h3 {
     color: #787879;
     font-weight: lighter
   }
@@ -52,8 +51,8 @@
 </head>
 <body class="september">
   <header>
-    <h1>九月</h1>
-    <h2>零碎的、断续的、明灭的。</h2>
+    <h1>日长小记</h1>
+    <h3>希望，祈祷，我的心境不要再粗糙、荒芜下去</h3>
   </header>
   <article>
     <p><time></time></p>
@@ -71,7 +70,7 @@
   <footer>
     <span>&copy; Copyright 2015 - 2017 by <a target="_blank" href="https://about.me/ahbing">Ahbing Huang</a></span>
   </footer>
-  <script async="async" src="./records.js"></script>
+  <script async="async" src="./2017.js"></script>
   <script>
   window.onload = function() {
     // init 
