--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
   <hr>
   <nav>
     <ul>
-      <li><a target="_blank" href="http://blog.ahbing.me">博客</a>: 技术相关的文章。</li>
-      <li><a target="_blank" href="https://www.douban.com/people/aahbing/">豆瓣</a>: 我的电影、书籍、音乐以及直觉。</li>
-      <li><a target="_blank" href="http://fanfou.com/ahbing">饭否</a>: 是我隐秘的哀愁，还我持重、克制的人生...</li>
+      <!--<li><a target="_blank" href="http://blog.ahbing.me">博客</a>: 技术相关的文章。</li>-->
+      <!--<li><a target="_blank" href="https://www.douban.com/people/aahbing/">豆瓣</a>: 我的电影、书籍、音乐以及直觉。</li>-->
+      <!--<li><a target="_blank" href="http://fanfou.com/ahbing">饭否</a>: 是我隐秘的哀愁，还我持重、克制的人生...</li>-->
+      <li><a target="_blank" href="https://www.douban.com/people/aahbing/">豆瓣</a></li>
+      <li><a target="_blank" href="http://weibo.com/aahbing">微博</a></li>
+      <li><a target="_blank" href="https://www.instagram.com/ahbing.huang/">Instagram</a></li>
     </ul>
   </nav>
   <hr>
